2002-12-06  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 17983: Src/Zle/zle_hist.c, Src/Zle/zle_params.c, Doc/Zsh/zle.yo:
	Added zle LASTSEARCH parameter, giving read access to last incremental
	search.

2002-12-06  Bart Schaefer  <schaefer@zsh.org>

	* 17985: Test/B02typeset.ztst: adjust hiding/tagging test so it no
	longer fails (cf. 17967 below).

2002-12-04  Peter Stephenson  <pws@csr.com>

	* 17979: Doc/Zsh/options.yo, Src/exec.c, Src/options.c, Src/zsh.h:
	Add ERR_RETURN option, similiar to ERR_EXIT option.

2002-11-26  Peter Stephenson  <pws@csr.com>

	* 17967: Test/B02typeset.ztst: globbable arguments to
	typeset-style commands should be quoted.  N.B.: test currently
	still fails.

2002-11-25  Oliver Kiddle  <opk@zsh.org>

	* 17961: Armin Wolfermann: Completion/Unix/Command/_sysctl:
	add OpenBSD support in _sysctl

2002-11-22  Oliver Kiddle  <opk@zsh.org>

	* 17958: Completion/Zsh/Command/_print, Completion/Zsh/Command/_read,
	Completion/Zsh/Command/_ulimit: change _print to reflect changes in
	17940, add missing options in _ulimit and minor update to _read

2002-11-20  Peter Stephenson  <pws@csr.com>

	* 17940: Src/builtin.c, Doc/Zsh/builtin.yo: print -C <cols> prints
	given number of columns, -a with -c or -C prints arguments across
	before down.

2002-11-13  Clint Adams  <clint@zsh.org>

	* 17935: Src/text.c: beautify bin_whence indentation of ()
	and {} contents.

2002-11-13  Peter Stephenson  <pws@csr.com>

	* 17931: Philippe Troin <phil@fifi.org>: Src/init.c: restore
	ignoring of SIGTERM in interactive shells.

2002-11-12  Oliver Kiddle  <opk@zsh.org>

	* Zvi Har'El: Completion/Unix/Command/_rcs: complete also for rcsdiff

	* 17928: Zvi Har'El <rl@math.technion.ac.il>:
	Functions/Zle/edit-command-line: don't interpret escapes when
	setting the command buffer

	* Thierry Vignaud <tvignaud@mandrakesoft.com>:
	Completion/Unix/Command/_links, Completion/Mandrake/Command/_urpmi:
	add option descriptions and missing options
