@@ -1,3 +1,8 @@
+2002-12-10  Peter Stephenson  <pws@csr.com>
+
+	* 17994: Src/pattern.c: A set of globbing flags with no effect
+	could hang the shell as the pattern wasn't compiled consistently.
+
 2002-12-06  Felix Rosencrantz <f_rosencrantz@yahoo.com>
 
 	* 17983: Src/Zle/zle_hist.c, Src/Zle/zle_params.c, Doc/Zsh/zle.yo:
